# Toggl.com-time-tracking-advanced-analitics

./: .gitignore  README.md  api_tutorial.py  apples.xlsx  main.py  noTutorialTest.xlsx  noTutorialTry.py  pyproject.toml  write_to_a_file_tutorial.py
tests/: test_processor.py
tests/data/: calculate_average_efficiency_per_user_in_range_input.json  calculate_average_efficiency_per_user_in_range_output.json  calculate_effective_times_output.json  calculate_efficiency_of_set_user_in_range_input_1.json  calculate_efficiency_of_set_user_in_range_output_1.json  calculate_efficiency_of_set_user_per_day_input.json  calculate_efficiency_of_set_user_per_day_output_1.json  calculate_efficiency_of_set_user_per_day_output_2.json  calculate_efficiency_of_set_user_per_day_output_3.json  calculate_efficiency_percentage_per_user_per_day_input_effective_times.json  calculate_efficiency_percentage_per_user_per_day_input_workdays.json  calculate_efficiency_percentage_per_user_per_day_output.json  calculate_workdays_for_users_per_day_input.json  calculate_workdays_for_users_per_day_output.json  convert_workdays_for_user_per_day_to_string_output.json  effective_worktime_calculator_input.json  sample_reports_response.json  structure_raw_entires_by_day_and_user_input.json  structure_raw_entires_by_day_and_user_output.json
toggl_extractor/: __main__.py  client.py  processor.py  settings.py  slack_client.py  test_processor.py  toggl_client.py
