[tool.poetry]
name = "vipra-data-unity"
version = "0.1.0"
description = ""
authors = ["Davide Vitelaru <davide@vipra.tech>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.4"
requests = "^2.27.1"
slackclient = "^2.9.3"
ipykernel = "^6.9.2"
unittest = "^0.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

